Fixed wildcardBubble on mobile phone

--- a/uniuggla/app/mobile_global.css
+++ b/uniuggla/app/mobile_global.css
@@ -75,6 +75,11 @@
 		height: 1vh;
 	}
 
+	.wildcardBubble {
+	position: unset;
+	margin-top: 1vh;
+	}
+
 	.interestItem,
 	.placeholderInterest {
 		width: 100%;
